Performance optimization: Optimize logo images to WebP, redesign homepage to login-only, add cache headers

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,26 @@
   "devCommand": "pnpm dev",
   "installCommand": "pnpm install",
   "framework": null,
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.(webp|png|jpg|jpeg|gif|svg|ico))",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
